<resources>
    <string name="account_sync_profile_information">Account Information</string>
    <string name="date_filter_dd_mm_yyyy">%1$d-%2$d-%3$d</string>
    <string name="date_filter_mm_dd_yyyy">%2$d-%1$d-%3$d</string>
    <string name="date_filter_yyyy_mm_dd">%3$d-%2$d-%1$d</string>
    <string name="emoji_sad" translatable="false">:(</string>
    <string name="info_loading">Loading…</string>
    <string name="info_warning">Warning</string>
    <string name="info_no_data"> </string>
    <string name="info_cart_empty">Your cart is empty</string>
    <string name="action_done">Done</string>
    <string name="action_remove_image">Remove image</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_retry">Retry</string>
    <string name="action_tap_to_retry">Tap to retry</string>
    <string name="action_open_app_settings">Open app settings</string>
    <string name="action_restart_app">Restart App</string>
    <string name="action_share">Share</string>
    <string name="action_show_hide_stacktrace">Show/hide stacktrace</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_json">JSON Error</string>
    <string name="error_fatal_restarting">Oops, an unexpected error has occurred.\nSorry for the inconvenience.</string>
    <string name="error_message_generic">An error occurred, please try again later.</string>
    <string name="error_message_generic_detail">An error occurred, please try again later.\n%1$s</string>
    <string name="error_message_generic_detail_code">An error occurred, please try again later.\nError %1$d: %2$s</string>
    <string name="error_conn_generic">Connection problem</string>
    <string name="error_conn_400">Bad Request</string>
    <string name="error_conn_401">Unauthorized</string>
    <string name="error_conn_403">Forbidden</string>
    <string name="error_conn_404">Not Found</string>
    <string name="error_conn_408">Request Timeout</string>
    <string name="error_conn_500">Internal Server Error</string>
    <string name="error_conn_501">Not Implemented</string>
    <string name="error_conn_502">Bad Gateway</string>
    <string name="error_conn_503">Service Unavailable</string>
    <string name="error_conn_504">Gateway Timeout</string>
    <string name="error_conn_maintenance">Server Under Maintenance</string>
    <string name="error_conn_time_out">Connection Timed Out</string>
    <string name="error_auth_not_logged_in">You are not logged in.</string>
    <string name="error_auth_already_logged_in">You are already logged in as %1$s.</string>
    <string name="error_auth_log_in_expired">Your login has expired.</string>
    <string name="error_input_username">Username is required</string>
    <string name="error_input_password">Password is required</string>
    <string name="warning_storage_space">Your internal storage space is running out, please free some spaces on your internal storage.</string>
    <string name="desc_term_condition">By tapping ‘SIGN UP,’ I confirm that I agree to Mililani’s Terms of Use and Privacy Policy</string>
    <string name="hint_enter_your_mobile_number">Enter your mobile number</string>
    <string name="hint_enter_your_card_number">Enter your card number</string>
    <string name="hint_enter_complete_phone_number">Enter a complete phone number or an email address.</string>
    <string name="enter_your_otp_that_was_sent_to">Enter your OTP that was sent to</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_now">Verify Now</string>
    <string name="close_apps">Do you want to close apps?</string>
    <string name="yes">Yes</string>
    <string name="signUp">Sign Up</string>
    <string name="next">Next</string>
    <string name="do_this_later">Do This Later</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title_personal_information">personal Information</string>
    <string name="title_please_complete_your">Please complete your</string>
    <string name="title_scan_the_barcode_on_your">Scan the barcode on </string>
    <string name="title_mta_card_to_save_it">your MTA card.</string>
    <string name="insert_your">Enter your</string>
    <string name="mta_card_number_manually">MTA card number.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_id_card_has_been_regsitered">Your ID Card has been registered.</string>
    <string name="finish">Finish</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="app_name">testlibrary</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="resend_code">Resend A New Code</string>
    <string name="didn_t_receive_the_code">Didn’t receive the code?</string>
    <string name="title_registration">Registration</string>
    <string name="title_event">Events</string>
    <string name="title_facility_schedule">Schedule</string>
    <string name="Help">Help</string>
    <string name="add_manually">Add Manually</string>
    <string name="add_mta_card">Add New MTA Card</string>
    <string name="please_wait">Please wait …</string>
    <string name="prefs_card_number" translatable="false">CARD_NUMBER</string>
    <string name="prefs_is_add_mta_card" translatable="false">IS_ADD_MTA_CARD</string>
    <string name="prefs_phone_number" translatable="false">PHONE_NUMBER</string>
    <string name="prefs_phone_number_unmask" translatable="false">PHONE_NUMBER_UNMASK</string>
    <string name="prefs_code_barcode" translatable="false">CODE_BARCODE</string>
    <string name="prefs_is_bottom_card_list" translatable="false">IS_BOTTOM_CARD_LIST</string>
    <string name="prefs_is_specific_menu" translatable="false">IS_SPECIFIC_MENU</string>
    <string name="prefs_is_url_assessment" translatable="false">IS_URL_ASSESSMENT</string>
    <string name="prefs_is_add_bottom_card_list" translatable="false">IS_ADD_BOTTOM_CARD_LIST</string>
    <string name="flag_on_back_menu_home_status_checked" translatable="false">FLAG_ON_BACK_MENU_STATUS_CHECKED</string>
    <string name="please_enter_it_below">Please enter it below</string>
    <string name="we_ve_just_sent_you_a_verification_code">We\'ve just sent you a verification code.</string>
    <string name="you_can_request_a_new_code_in">You can request a new code in</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="delete_this_card">delete this card</string>
    <string name="confirm_delete_this_card">delete this card?</string>
    <string name="add_card">Add New</string>
    <string name="set_as_primary">Set As Primary</string>
    <string name="add_new_mta_card">Add New MTA Card</string>
    <string name="are_you_sure_want_to">Are you sure want to</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to </string>
    <string name="delete_card">Delete Card</string>
    <string name="cancel">Cancel</string>
    <string name="mta_card_based_on_nickname">MTA card based on nickname</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="cafe">Cafe</string>
    <string name="pay_assessments">Pay Assessments</string>
    <string name="pay_assessments_online">Pay Assessments Online</string>
    <string name="recreation_centers">Recreation Centers</string>
    <string name="activities">Activities</string>
    <string name="news">News</string>
    <string name="employment">Employment</string>
    <string name="forms">Forms</string>
    <string name="newsletters">Newsletters</string>
    <string name="notification">Notifications</string>
    <string name="help_page">Help</string>
    <string name="message_mta_card_success_Added">MTA card data successfully added</string>
    <string name="log_out">log out?</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="your_id_card_has_been_registered">Your ID Card has been registered.</string>
    <string name="add_optional_nickname">Add optional nickname.</string>
    <string name="input_nickname_here">Input Nickname here</string>
    <string name="cannot_complete_action">Cannot complete action.</string>
    <string name="card_was_already_added">Card was already added</string>
    <string name="on_this_device">on this device</string>
    <string name="cancel_class">Cancel Class</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="choose_the_dates_to_show">Choose the dates to show</string>
    <string name="start_date">Start</string>
    <string name="end_date">End</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="select_category">Select Category</string>
    <string name="show">Show</string>
    <string name="reset">Reset</string>
    <string name="upcoming_activities">Upcoming Activities</string>
    <string name="classes">Classes</string>
    <string name="title_facility_reservation">Facility Reservation</string>
    <string name="all_activities">All Activities</string>
    <string name="date_range">Date Range</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="profile">Household Information</string>
    <string name="my_activities">History</string>
    <string name="setting">Setting</string>
    <string name="tile_log_out">Log Out</string>
    <string name="elgibility">Eligibility :</string>
    <string name="meeting_details">Meeting Details :</string>
    <string name="fee_s">Fee(s):</string>
    <string name="comment_s">Comment(s):</string>
    <string name="session">Session :</string>
    <string name="title_register">Register</string>
    <string name="enrollment_counts">Enrollment Counts:</string>
    <string name="recent_news">Recent News</string>
    <string name="see_all">See all</string>
    <string name="loading">Loading........</string>
    <string name="webview_url_register"><![CDATA[https://www2.mililanitown.org/wbwsc/webtrac.wsc/addtocart.html?FromProgram=search&Module=AR&ProcessMultiSelect=yes]]></string>
    <string name="url_classes"><![CDATA[https://www2.mililanitown.org/wbwsc/webtrac.wsc/search.html?display=detail&module=AR]]></string>
    <string name="url_reservation"><![CDATA[https://www2.mililanitown.org/wbwsc/webtrac.wsc/search.html?display=detail&module=FR]]></string>
    <string name="url_event"><![CDATA[https://www2.mililanitown.org/wbwsc/webtrac.wsc/search.html?display=detail&module=PST ]]></string>
    <string name="cafe_menu">Cafe Menu</string>
    <string name="required">Required</string>
    <string name="special_instruction">Special instructions</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item_notes">Item notes</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="have_a_promo_code">Have a promo code?</string>
    <string name="order_total">Order Total</string>
    <string name="select_time">Select Time</string>
    <string name="select_location">Select Location</string>
    <string name="enter_promo_code_here">Enter promo code here</string>
    <string name="promo_code">promo code</string>
    <string name="apply">Apply</string>
    <string name="submit">Submit</string>
    <string name="mta_rec_1">MTA REC 1</string>
    <string name="mta_rec_2">MTA REC 2</string>
    <string name="mta_rec_3">MTA REC 3</string>
    <string name="mta_rec_4">MTA REC 4</string>
    <string name="mta_rec_5">MTA REC 5</string>
    <string name="mta_rec_6">MTA REC 6</string>
</resources>