<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_classes"
        android:icon="@drawable/ic_selector_registration"
        android:title="@string/classes" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_selector_facility_schedule"
        android:title="Reservations" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_selector_events"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_selector_more"
        android:title="@string/more" />

</menu>