<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_small"
      android:src="@drawable/ic_warning"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="@dimen/margin_default"
      android:text="@string/cannot_complete_action"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="@dimen/margin_small"
      android:text="@string/card_was_already_added"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="@dimen/margin_small"
      android:text="@string/on_this_device"/>

  <Button
      android:id="@+id/btn_dismiss"
      android:layout_width="@dimen/fo_spacing_300"
      android:layout_height="wrap_content"
      android:text="@string/gander_dismiss"
      android:textSize="@dimen/fo_font_13"
      android:layout_marginTop="@dimen/margin_xlarge"
      android:foreground="?attr/selectableItemBackground"
      android:background="@drawable/bg_button_round_grey_primary"/>


</LinearLayout>