<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
android:background="@color/white">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_header_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_default">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/margin_large"
                        android:src="@drawable/ic_arrow_back_white" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center">

                    <ImageView
                        android:id="@+id/btn_scan_barcode"
                        android:layout_width="@dimen/fo_spacing_30"
                        android:layout_height="@dimen/fo_spacing_30"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:backgroundTint="@color/white"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_scan_barcode" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/fo_bg_bottom_sheet"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_larges"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginEnd="@dimen/margin_larges"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xlarge"
                        android:layout_weight="1"
                        android:text="@string/select_location"
                        android:textSize="@dimen/fo_font_16"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_default">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_1" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_2" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_3" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_4" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_5" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_mta_rec_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mta_rec_6" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_xlarge"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:layout_marginEnd="@dimen/margin_xxlarge"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/bg_button_round_grey_primary"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/margin_xxlarge"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/bg_button_round_primary"/>

    </LinearLayout>

</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
