<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_enter_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/fo_spacing_10"
        android:padding="@dimen/margin_default">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/congratulations"
          android:textSize="@dimen/text_xlarge"
          android:gravity="center"
          android:padding="@dimen/margin_xsmall"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/your_id_card_has_been_registered"
          android:textSize="@dimen/text_xlarge"
          android:layout_marginTop="@dimen/margin_small"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/add_optional_nickname"
          android:textSize="@dimen/text_xlarge"
          android:layout_marginTop="@dimen/margin_small"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/fo_size_256"
          android:padding="@dimen/margin_default"
          android:gravity="center"
          android:orientation="vertical">

        <TextView
            android:id="@+id/txt_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="MTA121219289"
            android:textSize="@dimen/fo_font_20"
            android:textStyle="bold"
            android:textColor="@color/titleMenuBlack"
            android:layout_marginTop="@dimen/margin_small"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_layout_nickname_mta_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="@dimen/fo_spacing_50">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/ed_nickname_mta_card"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:maxLength="30"
              android:lines="1"
              android:imeOptions="actionDone"
              android:inputType="text"
              android:hint="@string/input_nickname_here"
              android:foregroundTint="@color/colorPrimary"
              android:backgroundTint="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="@dimen/margin_large"
        android:orientation="vertical">

      <Button
          android:id="@+id/btn_save_mta_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_xlarge"
          android:background="@drawable/bg_button_grey"
          android:foreground="?attr/selectableItemBackground"
          android:text="@string/save"
          android:textColor="@color/white"/>

      <Button
          android:id="@+id/btn_skip_submit_nickname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_large"
          android:background="@drawable/bg_button_round_grey_primary"
          android:foreground="?attr/selectableItemBackground"
          android:text="@string/skip_this_step"
          android:textColor="@color/colorPrimary"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>