<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_small"
      android:src="@drawable/ic_promo"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_default"
      android:text="@string/enter_promo_code_here"/>

  <EditText
      android:id="@+id/btn_delete_card"
      android:layout_width="@dimen/fo_spacing_300"
      android:layout_height="wrap_content"
      android:hint="@string/promo_code"
      android:layout_marginTop="@dimen/margin_xlarge"
      android:gravity="center"
      android:backgroundTint="@color/em_transparent"
      android:foreground="?attr/selectableItemBackground"/>

  <View
      android:layout_width="@dimen/fo_spacing_300"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/fo_spacing_3"
      android:layout_marginStart="@dimen/margin_default"
      android:layout_marginEnd="@dimen/margin_default"
      android:background="@color/colorPrimary"/>

  <Button
      android:id="@+id/btn_apply"
      android:layout_width="@dimen/fo_spacing_300"
      android:layout_height="wrap_content"
      android:text="@string/apply"
      android:textColor="@color/white"
      android:layout_marginTop="@dimen/margin_xxlarge"
      android:foreground="?attr/selectableItemBackground"
      android:background="@drawable/bg_button_round_primary"/>


</LinearLayout>