<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_larges"
      android:orientation="vertical"
      tools:ignore="UselessParent">

    <TextView
        android:id="@+id/txt_name_detail_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:textSize="@dimen/fo_font_normal"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_larges"/>

    <TimePicker
        android:id="@+id/select_time_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

      <Button
          android:id="@+id/btn_reset"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/fo_spacing_60"
          android:layout_weight="1"
          android:background="@drawable/bg_button_round_grey_primary"
          android:foreground="?attr/selectableItemBackground"
          android:text="@string/reset"/>

      <Button
          android:id="@+id/btn_submit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/fo_spacing_60"
          android:layout_weight="1"
          android:background="@drawable/bg_button_round_primary"
          android:foreground="?attr/selectableItemBackground"
          android:text="@string/submit"
          android:textColor="@color/white"/>

    </LinearLayout>

  </LinearLayout>

</FrameLayout>